Fixed spacing around file upload inputs

--- a/public/stylesheets/sass/master.scss
+++ b/public/stylesheets/sass/master.scss
@@ -135,7 +135,7 @@ input.submit
 
 input.file
 {
-  padding:7px;
+  padding:7px 0;
 }
 
 .form-block
